Adding customer name to create measurements API